crates/graphql-orm/tests/ui/upsert_hidden_graphql_target.stderr
error: A GraphQL Input Object type must define one or more input fields.
 --> tests/ui/upsert_hidden_graphql_target.rs:9:8
  |
9 | struct UpsertHiddenTargetExample {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^

error: graphql_entity upsert target 'mac' must be present in the public GraphQL create input
 --> tests/ui/upsert_hidden_graphql_target.rs:9:8
  |
9 | struct UpsertHiddenTargetExample {
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0282]: type annotations needed
 --> tests/ui/upsert_hidden_graphql_target.rs:3:10
  |
3 | #[derive(GraphQLEntity, GraphQLOperations, Clone, Debug)]
  |          ^^^^^^^^^^^^^ cannot infer type
  |
  = note: this error originates in the derive macro `GraphQLEntity` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/ui/upsert_hidden_graphql_target.rs:3:10
  |
3 | #[derive(GraphQLEntity, GraphQLOperations, Clone, Debug)]
  |          ^^^^^^^^^^^^^ cannot infer type
  |
  = note: multiple `impl`s satisfying `_: Borrow<str>` found in the following crates: `alloc`, `async_graphql_parser`, `async_graphql_value`, `http`, `rustix`, `sqlx_core`:
          - impl Borrow<str> for Positioned<std::string::String>;
          - impl Borrow<str> for async_graphql::Name;
          - impl Borrow<str> for http::header::name::HeaderName;
          - impl Borrow<str> for rustix::net::netdevice::InlinedName;
          - impl Borrow<str> for sqlx_core::ext::ustr::UStr;
          - impl Borrow<str> for std::string::String;
  = note: required for `[_]` to implement `std::slice::Join<&str>`
  = note: this error originates in the derive macro `GraphQLEntity` (in Nightly builds, run with -Z macro-backtrace for more info)
